Added materialize and some basic styling

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,8 @@
-<%= link_to "Search Flights", root_path %>
-<%= link_to "Contact", contact_path %>
-<%= link_to "About", about_path %>
+<nav>
+	<div class="nav-wrapper">
+		<a href="/" class="brand-logo center">
+			<i class="material-icons">flight_takeoff</i>
+			<span>Flight Booker</span>
+		</a>
+	</div>
+</nav>
