--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,7 +2,7 @@
 
 <h1>About</h1>
 
-<hr>
+<div class="divider"></div>
 
 <p>This is a flight booker site where users can search and book flights.</p>
 
