--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Home</h1>
 
-<hr>
+<div class="divider"></div>
 
-This is where the Search Form will be.
+<p>This is where the Search Form will be.</p>
 
-This is where the Search Results will be.
+<p>This is where the Search Results will be.</p>
