added flights controller and skeleton for search functionality

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,6 @@
 
 <div class="divider"></div>
 
-<p>This is where the Search Form will be.</p>
+<%= render 'flights/search' %>
 
 <p>This is where the Search Results will be.</p>
