--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <nav>
 	<div class="nav-wrapper">
 		<a href="/" class="brand-logo center">
-			<i class="material-icons">flight_takeoff</i>
+			<i class="material-icons left">airplanemode_active</i>
 			<span>Flight Booker</span>
+			<i class="material-icons right">airplanemode_active</i>
 		</a>
 	</div>
 </nav>
