--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -1,19 +1,19 @@
-<%= form_for(@flight, url: search_path) do |f| %>
+<%= form_tag(search_path, method: :get) do %>
 	<div class="row">
 		<div class="col s3">
-			<%= f.label :departure_airport, "Origin" %>
-			<%= f.collection_select :departure_airport, @airport_options, :id, :name, {disabled: [0], selected: [0]}, class: "browser-default" %>
+			<%= label :departure_airport, "Origin" %>
+			<%= collection_select :flight, :departure_airport, @airport_options, :id, :name, {disabled: [0], selected: [0]}, class: "browser-default" %>
 		</div>
 		<div class="col s3">
-			<%= f.label :arrival_airport, "Destination" %>
-			<%= f.collection_select :arrival_airport, @airport_options, :id, :name, {disabled: [0], selected: [0]}, class: "browser-default" %>
+			<%= label :arrival_airport, "Destination" %>
+			<%= collection_select :flight, :arrival_airport, @airport_options, :id, :name, {disabled: [0], selected: [0]}, class: "browser-default" %>
 		</div>
 		<div class="col s4">
-			<%= f.label :departure_date, "Date of Departure" %>
-			<%= f.select :departure_date, @date_options, {}, class: "browser-default" %>
+			<%= label :departure_date, "Date of Departure" %>
+			<%= select :flight, :departure_date, @date_options, {}, class: "browser-default" %>
 		</div>
 		<div class="col s2">
-			<%= f.label :passengers, "Number of Passengers" %>
+			<%= label :passengers, "Number of Passengers" %>
 			<%= select_tag :passengers, options_for_select(@passenger_options), class: "browser-default" %>
 		</div>
 	</div>
