--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,4 +4,8 @@
 
 <%= render 'flights/search' %>
 
-<p>This is where the Search Results will be.</p>
+<br>
+<div class="divider"></div>
+<br>
+
+<%= render 'flights/search_results' %>
