attempted to tinker with text display for rails label helper, but materialize/rails seem to be making it weird..

--- a/app/views/flights/_search_results.html.erb
+++ b/app/views/flights/_search_results.html.erb
@@ -20,7 +20,7 @@
 					<tr>
 						<td>
 							<%= radio_button_tag :flight, flight.id %>
-							<%= label :flight, flight.id %>
+							<%= label :flight, flight.id, text = '-' %>
 						</td>				
 						<td>
 							<%= flight.departure_airport.abbreviation %>
