fixed no matching flights not displaying bug

--- a/app/views/flights/_search_results.html.erb
+++ b/app/views/flights/_search_results.html.erb
@@ -1,5 +1,5 @@
-<% if @flights %>
-	<%= form_tag(book_path, method: :get) do %>
+<% unless @flights.empty? %>
+	<%= form_tag(new_booking_path, method: :get) do %>
 		<%= hidden_field_tag :passengers, @passengers %>
 		<table class="responsive-table centered striped bordered">		
 			<thead>
@@ -53,7 +53,7 @@
 		</table>
 		<br>
 		<%= button_tag(name: "", class: "waves-effect waves-light btn-large") do %>
-			Book
+			Select
 			<i class="material-icons right">send</i>
 		<% end %>
 	<% end %>
