--- a/app/views/flights/_search_results.html.erb
+++ b/app/views/flights/_search_results.html.erb
@@ -54,7 +54,7 @@
 		<br>
 		<%= button_tag(name: "", class: "waves-effect waves-light btn-large") do %>
 			Select
-			<i class="material-icons right">send</i>
+			<i class="material-icons right">add_shopping_cart</i>
 		<% end %>
 	<% end %>
 <% else %>
